<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_96"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/geo_points_96"
        android:title="@string/title_maps" />

    <item
        android:id="@+id/navigation_user"
        android:icon="@drawable/user_96"
        android:title="@string/title_user" />
    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/notificatiopn_bell_96"
        android:title="@string/title_notification" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/settings_96"
        android:title="@string/title_settings" />

</menu>
